@@ -5,12 +5,12 @@ noinst_LTLIBRARIES =						\
 INCLUDES =							\
 	-I$(top_srcdir)						\
 	-I$(top_srcdir)/camel					\
+	-I$(top_srcdir)/storage  				\
 	-DG_LOG_DOMAIN=\"exchange-mail\"			\
 	$(EXTRA_GNOME_CFLAGS)					\
 	$(BONOBO_GNOME_CFLAGS)					\
 	$(MAIL_CFLAGS)						\
 	$(LIBEXCHANGE_CFLAGS)					\
-	-I$(top_srcdir)/storage  				\
 	$(LDAP_CFLAGS)						
 
 libexchangemail_la_SOURCES =					\
