@@ -1,3 +1,13 @@
+2009-03-06  Tobias Mueller  <tobiasmue@gnome.org>
+
+	* mail/Makefile.am:
+	* addressbook/Makefile.am:
+	* storage/Makefile.am:
+	* calendar/Makefile.am:
+	Changed order of the libs to link against to not pull system libs
+
+	** Fixes bug #572950 (Patch by Daniel Macks)
+
 2009-03-04  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #567852
